@@ -23,7 +23,6 @@
 #ifndef variables_header_included
 #define variables_header_included
 
-#include <stdbool.h>
 #include "lex.h"
 #include "symbol.h"
 
@@ -39,9 +38,9 @@ typedef struct VarPos
   char name[]; /**< NUL terminated symbol name.  */
 } VarPos;
 
-bool c_gbl (bool doLowerCase);
-bool c_lcl (bool doLowerCase);
-bool c_set (const Lex *label, bool doLowerCase);
+bool c_gbl (void);
+bool c_lcl (void);
+bool c_set (const Lex *label);
 
 void Var_RestoreLocals (const VarPos *);	/* called on macro exit */
 void Var_Define (const char *);
